k8s/manifests/hass-proxy/hass-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hass-proxy
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: hass-proxy
  template:
    metadata:
      labels:
        app: hass-proxy
    spec:
      containers:
        - name: hass-proxy
          image: nginx:latest
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
              readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: hass-proxy-nginx-conf
            optional: false
      nodeSelector:
        network: dtcnet
      tolerations:
        - key: dtcnet
          operator: Exists
          effect: NoSchedule
---
apiVersion: v1
kind: Service
metadata:
  name: hass-proxy
spec:
  selector:
    app: hass-proxy
  ports:
    - port: 80
      targetPort: 32768
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hass-proxy
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private-gateway
  hostnames:
    - ha.o.cavnet.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hass-proxy
          port: 80
